--- a/marelle/marelle.html
+++ b/marelle/marelle.html
@@ -10,79 +10,93 @@
 
     <a-scene background="color: black">
 
-        <!-- width > x, height > y, depth > z -->
+        <!-- width > x, height > y, depth > z-->
         <!-- position > x, y, z -->
         <!-- nb2 : cmd+K+C = commentaire, cmd+K+U = c'est plus un commentaire, magie! -->
 
     <a-assets>
+      <img id="bleu" src="bleu.png"></img>
+      <img id="jaune" src="jaune.png"></img>
+      <img id="rose" src="rose.png"></img>
+      <img id="rouge" src="rouge.png"></img>
+      <img id="vert" src="vert.png"></img>
+      <img id="violet" src="violet.png"></img>
 
-      <img id="asteroid" src="asteroid.png"></img>
       <img id="ciel" src="ciel.png"></img>
 
     </a-assets>
 
-    <a-dodecahedron
-      src="#asteroid"
+    <a-cylinder
+      src="#bleu"
       position="0 0.05 0"
-      radius="0.3"
-      rotation="30 0 0">
-    </a-dodecahedron>
+      height="1"
+      radius="0.2"
+      rotation="0 0 0">
+    </a-cylinder>
 
-    <a-dodecahedron
-      src="#asteroid"
+    <a-cylinder
+      src="#jaune"
       position="1 0.05 0.5"
+      height="1"
       radius="0.28"
-      rotation="30 0 0">
-    </a-dodecahedron>
+      rotation="0 0 0">
+    </a-cylinder>
 
-    <a-dodecahedron
-      src="#asteroid"
+    <a-cylinder
+      src="#rose"
       position="0.6 0.05 1.3"
+      height="1"
       radius="0.26"
-      rotation="30 0 0">
-    </a-dodecahedron>
+      rotation="0 0 0">
+    </a-cylinder>
 
-    <a-dodecahedron
-      src="#asteroid"
+    <a-cylinder
+      src="#rouge"
       position="-0.5 0.05 1.4"
+      height="1"
       radius="0.24"
-      rotation="30 0 0">
-    </a-dodecahedron>
+      rotation="0 0 0">
+    </a-cylinder>
 
-    <a-dodecahedron
-      src="#asteroid"
+    <a-cylinder
+      src="#vert"
       position="-1.4 0.05 0.9"
+      height="1"
       radius="0.22"
-      rotation="30 0 0">
-    </a-dodecahedron>
+      rotation="0 0 0">
+    </a-cylinder>
 
-    <a-dodecahedron
-      src="#asteroid"
+    <a-cylinder
+      src="#vert"
       position="-1.4 0.05 0.2"
+      height="1"
       radius="0.20"
-      rotation="30 0 0">
-    </a-dodecahedron>
+      rotation="0 0 0">
+    </a-cylinder>
 
-    <a-dodecahedron
-      src="#asteroid"
+    <a-cylinder
+      src="#vert"
       position="-1.4 0.05 -0.5"
+      height="1"
       radius="0.18"
-      rotation="30 0 0">
-    </a-dodecahedron>
+      rotation="0 0 0">
+    </a-cylinder>
 
-    <a-dodecahedron
-      src="#asteroid"
+    <a-cylinder
+      src="#violet"
       position="-1 0.05 -1"
+      height="1"
       radius="0.16"
-      rotation="30 0 0">
-    </a-dodecahedron>
+      rotation="0 0 0">
+    </a-cylinder>
 
-    <a-dodecahedron
-      src="#asteroid"
+    <a-cylinder
+      src="#bleu"
       position="0 0.05 -1.5"
-      radius="0.3"
-      rotation="30 0 0">
-    </a-dodecahedron>
+      height="1"
+      radius="0.1"
+      rotation="0 0 0">
+    </a-cylinder>
 
     <a-sky
       src="#ciel"
