--- a/marelle/marelle_pieds-mains.html
+++ b/marelle/marelle_pieds-mains.html
@@ -27,7 +27,7 @@
 
         <!-- INSEREZ VOTRE ENVIRONNEMENT, CI-DESSOUS ... -->
         
-        <a-cylinder
+      <a-cylinder
         src="#bleu"
         position="0 -25 0"
         height="50"
@@ -102,6 +102,7 @@
       <a-sky
         src="#ciel"
       >
+      </a-sky>
 
         <!-- ... JUSQUE CI-DESSUS -->
 
