--- a/marelle/marelle_pieds.html
+++ b/marelle/marelle_pieds.html
@@ -11,17 +11,17 @@
     <a-scene background="color: #5280A7">
 
         <a-assets>
-            <a-asset-item id="leftfoot" src="./assets/piedgauche.glb"></a-asset-item>
-            <a-asset-item id="rightfoot" src="./assets/pieddroite.glb"></a-asset-item>
+            <a-asset-item id="leftfoot" src="./assets/modeles/piedgauche.glb"></a-asset-item>
+            <a-asset-item id="rightfoot" src="./assets/modeles/pieddroite.glb"></a-asset-item>
 
-            <img id="bleu" src="bleu.png"></img>
-            <img id="jaune" src="jaune.png"></img>
-            <img id="rose" src="rose.png"></img>
-            <img id="rouge" src="rouge.png"></img>
-            <img id="vert" src="vert.png"></img>
-            <img id="violet" src="violet.png"></img>
+            <img id="bleu" src="./assets/images/bleu.png"></img>
+            <img id="jaune" src="./assets/images/jaune.png"></img>
+            <img id="rose" src="./assets/images/rose.png"></img>
+            <img id="rouge" src="./assets/images/rouge.png"></img>
+            <img id="vert" src="./assets/images/vert.png"></img>
+            <img id="violet" src="./assets/images/violet.png"></img>
 
-            <img id="ciel" src="ciel.png"></img>
+            <img id="ciel" src="./assets/images/ciel.png"></img>
         </a-assets>
 
         <!-- INSEREZ VOTRE ENVIRONNEMENT, CI-DESSOUS ... -->
