--- a/marelle/marelle_environnement.html
+++ b/marelle/marelle_environnement.html
@@ -15,15 +15,14 @@
         <!-- nb2 : cmd+K+C = commentaire, cmd+K+U = c'est plus un commentaire, magie! -->
 
     <a-assets>
-      <img id="bleu" src="bleu.png"></img>
-      <img id="jaune" src="jaune.png"></img>
-      <img id="rose" src="rose.png"></img>
-      <img id="rouge" src="rouge.png"></img>
-      <img id="vert" src="vert.png"></img>
-      <img id="violet" src="violet.png"></img>
+      <img id="bleu" src="./assets/images/bleu.png"></img>
+      <img id="jaune" src="./assets/images/jaune.png"></img>
+      <img id="rose" src="./assets/images/rose.png"></img>
+      <img id="rouge" src="./assets/images/rouge.png"></img>
+      <img id="vert" src="./assets/images/vert.png"></img>
+      <img id="violet" src="./assets/images/violet.png"></img>
 
-      <img id="ciel" src="ciel.png"></img>
-
+      <img id="ciel" src="./assets/images/ciel.png"></img>
     </a-assets>
 
     <a-cylinder
