--- a/marelle/marelle_pieds-mains.html
+++ b/marelle/marelle_pieds-mains.html
@@ -12,8 +12,8 @@
     <a-scene background="color: #5280A7">
 
         <a-assets>
-          <a-asset-item id="leftfoot" src="./assets/modeles/piedgauche.glb"></a-asset-item>
-          <a-asset-item id="rightfoot" src="./assets/modeles/pieddroite.glb"></a-asset-item>
+          <a-asset-item id="leftfoot" src="../piedgauche.glb"></a-asset-item>
+          <a-asset-item id="rightfoot" src="../pieddroite.glb"></a-asset-item>
 
           <img id="bleu" src="./assets/images/bleu.png"></img>
           <img id="jaune" src="./assets/images/jaune.png"></img>
@@ -69,7 +69,7 @@
   
       <a-cylinder
         src="#vert"
-        position="-1.4 -0.25 0.2"
+        position="-1.6 -0.25 0.2"
         height="0.5"
         radius="0.20"
         rotation="0 0 0">
