--- a/marelle/marelle_pieds.html
+++ b/marelle/marelle_pieds.html
@@ -11,8 +11,8 @@
     <a-scene background="color: #5280A7">
 
         <a-assets>
-            <a-asset-item id="leftfoot" src="./assets/modeles/piedgauche.glb"></a-asset-item>
-            <a-asset-item id="rightfoot" src="./assets/modeles/pieddroite.glb"></a-asset-item>
+            <a-asset-item id="leftfoot" src="../piedgauche.glb"></a-asset-item>
+            <a-asset-item id="rightfoot" src="../pieddroite.glb"></a-asset-item>
 
             <img id="bleu" src="./assets/images/bleu.png"></img>
             <img id="jaune" src="./assets/images/jaune.png"></img>
