--- a/marelle/marelle_environnement.html
+++ b/marelle/marelle_environnement.html
@@ -12,7 +12,8 @@
 
         <!-- width > x, height > y, depth > z-->
         <!-- position > x, y, z -->
-        <!-- nb2 : cmd+K+C = commentaire, cmd+K+U = c'est plus un commentaire, magie! -->
+        <!-- nb2 : cmd+K+C = commentaire, cmd+K+U = c'est plus un commentaire, magie! 
+        https://www.youtube.com/watch?v=fWlHjpKmvh8-->
 
     <a-assets>
       <img id="bleu" src="./assets/images/bleu.png"></img>
