--- a/marelle/marelle_environnement.html
+++ b/marelle/marelle_environnement.html
@@ -96,7 +96,7 @@
 
     <a-box
       multisrc="src0:#bleu0;src1:#bleu0;src2:#bleu2;
-      src3:#bleu0;src4:#bleu0;src5:#bleu0;"
+      src3:#bleu0;src4:#bleu0;src5:#bleu0"
       position="0 -0.1 -1.5"
       height="0.2"
       depth="0.2"
