--- a/marelle/marelle_pieds-mains.html
+++ b/marelle/marelle_pieds-mains.html
@@ -5,6 +5,7 @@
 <head>
     <meta charset="utf-8">
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+    <script src="https://cdn.rawgit.com/elbobo/aframe-multisrc-component/b6d23310/dist/0.3/aframe-multisrc-component.js"></script>
     <script src="myutils.js"></script>
 </head>
 
@@ -94,7 +95,7 @@
 
     <a-box
       multisrc="src0:#bleu0;src1:#bleu0;src2:#bleu2;
-      src3:#bleu0;src4:#bleu0;src5:#bleu0;"
+      src3:#bleu0;src4:#bleu0;src5:#bleu0"
       position="0 -0.1 -1.5"
       height="0.2"
       depth="0.2"
