--- a/marelle/marelle_pieds-mains.html
+++ b/marelle/marelle_pieds-mains.html
@@ -13,6 +13,9 @@
     <a-scene background="color: #5280A7">
 
       <a-assets>
+        <a-asset-item id="leftfoot" src="../piedgauche.glb"></a-asset-item>
+        <a-asset-item id="rightfoot" src="../pieddroite.glb"></a-asset-item>
+
         <img id="bleu0" src="./assets/images/bleu0.png"></img>
         <img id="bleu1" src="./assets/images/bleu1.png"></img>
         <img id="bleu2" src="./assets/images/bleu2.png"></img>
